--- a/docs/csharp/tutorials/exploration/interpolated-strings.yml
+++ b/docs/csharp/tutorials/exploration/interpolated-strings.yml
@@ -9,12 +9,12 @@ metadata:
   level: Beginner
   displayType: two-column
   interactive: csharp
-  ms.openlocfilehash: 1b54ea8b3bbb63bdadb8386b0f6311f1f5458b42
-  ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+  ms.openlocfilehash: 7736a2a26b37d8fbfac98328f94ce3c9a25be181
+  ms.sourcegitcommit: d9c7ac5d06735a01c1fafe34efe9486734841a72
   ms.translationtype: MT
   ms.contentlocale: it-IT
-  ms.lasthandoff: 03/14/2020
-  ms.locfileid: "76737542"
+  ms.lasthandoff: 05/06/2020
+  ms.locfileid: "82861001"
 items:
 - durationInMinutes: 2
   content: >
@@ -22,7 +22,7 @@ items:
 - title: Creare una stringa interpolata
   durationInMinutes: 2
   content: >
-    Eseguire il codice seguente nella finestra interattiva. Selezionare il **pulsante Attiva modalità messa a fuoco.** Quindi, digitare il seguente blocco di `<name>` codice nella finestra interattiva (sostituire con il proprio nome) e selezionare **Esegui**:
+    Eseguire il codice seguente nella finestra interattiva. Selezionare il pulsante **Attiva modalità messa a fuoco** . Quindi, digitare il blocco di codice seguente nella finestra interattiva (sostituire `<name>` con il proprio nome) e selezionare **Esegui**:
 
 
     ```csharp
@@ -47,18 +47,13 @@ items:
 
 
     Ora si proveranno altri esempi di interpolazione di stringhe con altri tipi di dati.
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - title: Includere tipi di dati diversi
   durationInMinutes: 5
   content: >
     Nel passaggio precedente è stata usata l'interpolazione di stringhe per inserire una stringa in un'altra. Un'espressione di interpolazione che fa parte di un'espressione di stringa interpolata può avere tuttavia qualsiasi tipo di dati. Includere valori di varie espressioni di tipi di dati in una stringa interpolata.
 
 
-    Nell'esempio seguente viene innanzitutto definita `Name` `Price`una `perPackage` [tupla](../../tuples.md) con membri , , e . Eseguire il codice seguente nella finestra interattiva:
+    Nell'esempio seguente viene innanzitutto definita una [tupla](../../tuples.md) con `Name`membri, `Price`e. `perPackage` Eseguire il codice seguente nella finestra interattiva:
 
 
     ```csharp
@@ -82,11 +77,6 @@ items:
 
 
     Nell'output di questo esempio la data è troppo precisa (il prezzo delle melanzane non varia ogni secondo) e il valore del prezzo non indica una valuta. Nel passaggio successivo si apprenderà come risolvere questi problemi controllando la formattazione delle rappresentazioni di stringa dei risultati delle espressioni.
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - title: Controllare la formattazione delle espressioni di interpolazione
   durationInMinutes: 5
   content: >
@@ -110,11 +100,6 @@ items:
 
 
     Oltre alla formattazione è possibile controllare la larghezza del campo e l'allineamento delle stringhe formattate incluse nella stringa di risultato. Il passaggio successivo indica come eseguire questa operazione.
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - title: Controllare la larghezza del campo e l'allineamento delle espressioni di interpolazione
   durationInMinutes: 6
   content: >
@@ -151,11 +136,6 @@ items:
     Console.WriteLine($"[{DateTime.Now,-20:d}] Hour [{DateTime.Now,-10:HH}] [{1063.342,15:N2}] feet");
 
     ```
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - content: >-
     È stata completata l'esercitazione interattiva sull'interpolazione di stringhe. È possibile visitare il [sito Web .NET](https://dotnet.microsoft.com/learn/dotnet/hello-world-tutorial/intro) per scaricare .NET Core SDK, creare un progetto nel computer e continuare a scrivere codice.
 
