--- a/docs/csharp/tutorials/intro-to-csharp/list-collection.yml
+++ b/docs/csharp/tutorials/intro-to-csharp/list-collection.yml
@@ -9,12 +9,12 @@ metadata:
   level: Beginner
   displayType: two-column
   interactive: csharp
-  ms.openlocfilehash: f7fd68120defbfcda6ac11e14bc749bf4d69c109
-  ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+  ms.openlocfilehash: 03f12cbdd8f9c088a5f279efcadef64c2848fa13
+  ms.sourcegitcommit: d9c7ac5d06735a01c1fafe34efe9486734841a72
   ms.translationtype: MT
   ms.contentlocale: it-IT
-  ms.lasthandoff: 03/14/2020
-  ms.locfileid: "73969382"
+  ms.lasthandoff: 05/06/2020
+  ms.locfileid: "82860961"
 items:
 - durationInMinutes: 1
   content: >
@@ -22,7 +22,7 @@ items:
 - title: Creare elenchi
   durationInMinutes: 2
   content: >
-    Eseguire il codice seguente nella finestra interattiva. Selezionare il **pulsante Attiva modalità messa a fuoco.** Quindi, digitare il seguente blocco di `<name>` codice nella finestra interattiva (sostituire con il proprio nome) e selezionare **Esegui**:
+    Eseguire il codice seguente nella finestra interattiva. Selezionare il pulsante **Attiva modalità messa a fuoco** . Quindi, digitare il blocco di codice seguente nella finestra interattiva (sostituire `<name>` con il proprio nome) e selezionare **Esegui**:
 
 
     ```csharp
@@ -38,7 +38,7 @@ items:
     ```
 
 
-    Se si esegue questa operazione nell'ambiente, è necessario seguire le istruzioni per la [versione locale.](arrays-and-collections.md)
+    Se si esegue questa operazione nell'ambiente in uso, è consigliabile seguire invece le istruzioni per la [versione locale](arrays-and-collections.md) .
 
 
     Questo codice consente di creare un elenco di stringhe, aggiungere tre nomi all'elenco e stampare i nomi in lettere maiuscole. Vengono usati i concetti appresi nelle esercitazioni precedenti per eseguire il ciclo dell'elenco.
@@ -48,11 +48,6 @@ items:
 
 
     L'esplorazione continua nelle prossime lezioni.
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - title: Modificare il contenuto dell'elenco
   durationInMinutes: 3
   content: >
@@ -106,12 +101,7 @@ items:
     ```
 
 
-    Selezionare di nuovo **Esegui** per visualizzare i risultati. In C# gli indici iniziano da 0, pertanto l'indice massimo valido è minore di un'unità rispetto al numero di elementi nell'elenco.
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
+    Selezionare **Esegui** di nuovo per visualizzare i risultati. In C# gli indici iniziano da 0, pertanto l'indice massimo valido è minore di un'unità rispetto al numero di elementi nell'elenco.
 - title: Eseguire ricerche negli elenchi e ordinarli
   durationInMinutes: 5
   content: >
@@ -147,11 +137,6 @@ items:
     }
 
     ```
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - title: Elenchi di altri tipi
   durationInMinutes: 5
   content: >
@@ -184,20 +169,10 @@ items:
 
 
     Premere **Esegui** per visualizzare i risultati.
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - title: Esercizio
   durationInMinutes: 10
   content: >
     È il momento di scoprire se è possibile mettere in pratica alcuni dei concetti appresi in questa lezione e in quelle precedenti. Applicare i concetti appresi finora in relazione ai numeri di Fibonacci. Provare a scrivere il codice per generare i primi 20 numeri nella successione. Tenere presente che il 20° numero di Fibonacci è 6765.
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - title: Completare l'esercizio
   durationInMinutes: 3
   content: >
@@ -224,19 +199,14 @@ items:
 
 
     A ogni iterazione del ciclo, gli ultimi due interi nell'elenco vengono sommati e il valore risultante viene aggiunto all'elenco. Il ciclo viene ripetuto fino ad aggiungere 20 elementi all'elenco.
-
-
-    > [!NOTE]
-
-    > Questa esperienza di scrittura del codice online è in modalità di anteprima. Se si verificano problemi, segnalarli [nel repository dotnet/try](https://github.com/dotnet/try/issues).
 - content: >-
-    È stata completata questa esercitazione interattiva dedicata agli elenchi. Si tratta dell'introduzione finale all'esercitazione interattiva su C#. È possibile visitare il [sito Web .NET](https://dotnet.microsoft.com/learn/dotnet/hello-world-tutorial/intro) per scaricare .NET Core SDK, creare un progetto nel computer e continuare a scrivere codice. La sezione "Passaggi successivi" riporta a queste esercitazioni.
+    È stata completata questa esercitazione interattiva dedicata agli elenchi. Si tratta dell'introduzione finale all'esercitazione interattiva su C#. È possibile visitare il [sito Web .NET](https://dotnet.microsoft.com/learn/dotnet/hello-world-tutorial/intro) per scaricare .NET Core SDK, creare un progetto nel computer e continuare a scrivere codice. La sezione "passaggi successivi" riporta a queste esercitazioni.
 
 
     Per altre informazioni sulle [raccolte .NET](../../../standard/collections/index.md), vedere gli articoli seguenti:
 
     - [Selezione di una classe Collection](../../../standard/collections/selecting-a-collection-class.md)
 
-    - [Tipi di raccolta comunemente utilizzati](../../../standard/collections/commonly-used-collection-types.md)
+    - [Tipi di raccolte comunemente usate](../../../standard/collections/commonly-used-collection-types.md)
 
-    - [Quando utilizzare raccolte generiche](../../../standard/collections/when-to-use-generic-collections.md)
+    - [Quando usare raccolte generiche](../../../standard/collections/when-to-use-generic-collections.md)
