--- a/docs/csharp/toc.yml
+++ b/docs/csharp/toc.yml
@@ -1664,6 +1664,7 @@
       items:
         - name: Attributi globali
           displayName: 'AssemblyName, AssemblyVersion, AssemblyCulture, AssemblyFlags, AssemblyProduct, AssemblyTrademark, AssemblyInformationalVersion, AssemblyCompany, AssemblyCopyright, AssemblyFileVersion, CLSCompliant, AssemblyTitle, AssemblyDescription, AssemblyConfiguration, AssemblyDefaultAlias'
+          href: language-reference/attributes/global.md
         - name: Generale
           displayName: 'Conditional, Obsolete, AttributeUsage'
           href: language-reference/attributes/general.md
