--- a/docs/architecture/toc.yml
+++ b/docs/architecture/toc.yml
@@ -15,6 +15,8 @@
       href: microservices/
     - name: 'App serverless: architettura, modelli e implementazione di Azure'
       href: serverless/
+    - name: Modernizzazione di app desktop in Windows 10 con .NET Core 3.1
+      href: modernize-desktop/
 - name: E-book in anteprima
   expanded: true
   items:
