--- a/docs/core/toc.yml
+++ b/docs/core/toc.yml
@@ -109,6 +109,9 @@
         - name: Creare un'applicazione console
           href: tutorials/with-visual-studio-code.md
           displayName: 'tutorials, visual studio code, vs code, cli'
+        - name: Eseguire il debug di un'app
+          href: tutorials/debugging-with-visual-studio-code.md
+          displayName: 'tutorials, visual studio code, vs code'
         - name: Creare un'app console e pubblicarla
           href: tutorials/cli-create-console-app.md
           displayName: 'tutorials, cli'
