--- a/docs/core/toc.yml
+++ b/docs/core/toc.yml
@@ -112,9 +112,9 @@
         - name: Eseguire il debug di un'app
           href: tutorials/debugging-with-visual-studio-code.md
           displayName: 'tutorials, visual studio code, vs code'
-        - name: Creare un'app console e pubblicarla
-          href: tutorials/cli-create-console-app.md
-          displayName: 'tutorials, cli'
+        - name: Pubblicare un'app
+          href: tutorials/publishing-with-visual-studio-code.md
+          displayName: 'tutorials, visual studio, vs'
         - name: Creare una libreria e sottoporla a unit test - macOS
           href: tutorials/using-on-macos.md
           displayName: 'tutorials, visual studio code, vs code, cli'
