--- a/docs/standard/toc.yml
+++ b/docs/standard/toc.yml
@@ -223,6 +223,10 @@
           displayName: 'unmanaged resources, memory management'
         - name: Implementare un metodo Dispose
           href: garbage-collection/implementing-dispose.md
+          displayName: 'using, Dispose, dispose pattern, IDisposable'
+        - name: Implementare un metodo DisposeAsync
+          href: garbage-collection/implementing-disposeasync.md
+          displayName: 'await using, DisposeAsync, async dispose pattern, IAsyncDisposable'
         - name: Usare oggetti che implementano IDisposable
           href: garbage-collection/using-objects.md
     - name: Garbage Collection
