--- a/docs/framework/toc.yml
+++ b/docs/framework/toc.yml
@@ -464,16 +464,22 @@
       href: additional-apis/index.md
     - name: Microsoft.SqlServer.Server
       items:
-        - name: SmiOrderProperty.Item
-          href: additional-apis/microsoft.sqlserver.server.smiorderproperty.item.md
+        - name: Classe SmiOrderProperty
+          items:
+            - name: Proprietà Item
+              href: additional-apis/microsoft.sqlserver.server.smiorderproperty.item.md
     - name: System
       items:
-        - name: Metodo Exception.PrepForRemoting
-          href: additional-apis/system.exception.prepforremoting.md
+        - name: Exception (classe)
+          items:
+            - name: Metodo PrepForRemoting
+              href: additional-apis/system.exception.prepforremoting.md
     - name: System.Data.SqlTypes
       items:
-        - name: Proprietà SqlChars.Stream
-          href: additional-apis/system.data.sqltypes.sqlchars.stream.md
+        - name: Classe SqlChars
+          items:
+            - name: Proprietà Stream
+              href: additional-apis/system.data.sqltypes.sqlchars.stream.md
         - name: Classe SqlStreamChars
           items:
             - name: Costruttore SqlStreamChars
@@ -500,10 +506,14 @@
               href: additional-apis/system.data.sqltypes.sqlstreamchars.write.md
     - name: System.IO
       items:
-        - name: Metodo MemoryStream.InternalGetOriginAndLength
-          href: additional-apis/system.io.memorystream.internalgetoriginandlength.md
+        - name: Classe MemoryStream
+          items:
+            - name: Metodo InternalGetOriginAndLength
+              href: additional-apis/system.io.memorystream.internalgetoriginandlength.md
     - name: System.Net
       items:
+        - name: Classe ComNetOS
+          href: additional-apis/system.net.comnetos.md
         - name: Classe Connection
           href: additional-apis/connection.md
           items:
@@ -514,8 +524,10 @@
           items:
             - name: Campo m_ConnectionList
               href: additional-apis/m_connectionlist.md
-        - name: Proprietà ConnectStream.Connection
-          href: additional-apis/system.net.connectstream.connection.md
+        - name: Classe ConnectStream
+          items:
+            - name: Proprietà Connection
+              href: additional-apis/system.net.connectstream.connection.md
         - name: Classe CoreResponseData
           href: additional-apis/coreresponsedata.md
           items:
@@ -523,6 +535,10 @@
               href: additional-apis/coreresponsedata_m_responseheaders.md
             - name: Campo m_StatusCode
               href: additional-apis/coreresponsedata_m_statuscode.md
+        - name: Classe ExceptionHelper
+          href: additional-apis/system.net.exceptionhelper.md
+        - name: Classe HttpStatusDescription
+          href: additional-apis/system.net.httpstatusdescription.md
         - name: Classe HttpWebRequest
           items:
             - name: Campo _AutoRedirects
@@ -531,22 +547,46 @@
               href: additional-apis/httpwebrequest__coreresponse.md
             - name: Campo _HttpResponse
               href: additional-apis/_httpresponse.md
-        - name: Proprietà PooledStream.NetworkStream
-          href: additional-apis/system.net.pooledstream.networkstream.md
+        - name: Classe Logging
+          href: additional-apis/system.net.logging.md
+        - name: Classe MailAddressParser
+          href: additional-apis/system.net.mail.mailaddressparser.md
+        - name: Classe MailBnfHelper
+          href: additional-apis/system.net.mime.mailbnfhelper.md
+        - name: Classe PooledStream
+          items:
+            - name: Proprietà NetworkStream
+              href: additional-apis/system.net.pooledstream.networkstream.md
+        - name: Classe QuotedPairReader
+          href: additional-apis/system.net.mail.quotedpairreader.md
         - name: Classe RtcState
           href: additional-apis/system.net.rtcstate.md
         - name: Classe ServicePoint
           items:
             - name: Campo m_ConnectionGroupList
               href: additional-apis/m_connectiongrouplist.md
+        - name: Classe ServicePointManager
+          items:
+            - name: Metodo CloseConnectionGroups
+              href: additional-apis/system.net.servicepointmanager.closeconnectiongroups.md
             - name: Campo s_ServicePointTable
               href: additional-apis/s_servicepointtable.md
-        - name: Campo TlsStream.m_Worker
-          href: additional-apis/system.net.tlsstream.m_worker.md
+        - name: Classe TlsStream
+          items:
+            - name: Campo m_Worker
+              href: additional-apis/system.net.tlsstream.m_worker.md
+        - name: Classe UnsafeNclNativeMethods
+          href: additional-apis/system.net.unsafenclnativemethods.md
+        - name: Classe WebHeaderCollection
+          items:
+            - name: Metodo AddInternal
+              href: additional-apis/system.net.webheadercollection.addinternal.md
     - name: System.Net.Security
       items:
-        - name: Proprietà SslState.SslProtocol
-          href: additional-apis/system.net.security.sslstate.sslprotocol.md
+        - name: Classe SslState
+          items:
+            - name: Proprietà SslProtocol
+              href: additional-apis/system.net.security.sslstate.sslprotocol.md
     - name: System.ServiceModel.Channels
       items:
         - name: Classe Message
@@ -557,8 +597,10 @@
               href: additional-apis/system.servicemodel.channels.message.writestartheaders.md
     - name: System.Windows.Diagnostics
       items:
-        - name: VisualDiagnostics.s_isDebuggerCheckDisabledForTestPurposes
-          href: additional-apis/s-isdebuggercheckdisabledfortestpurposes-field.md
+        - name: Classe VisualDiagnostics
+          items:
+            - name: Campo s_isDebuggerCheckDisabledForTestPurposes
+              href: additional-apis/s-isdebuggercheckdisabledfortestpurposes-field.md
     - name: System.Windows.Forms.Design
       items:
         - name: Classe DataMemberFieldEditor
@@ -567,7 +609,7 @@
           href: additional-apis/datamemberlisteditor-class.md
     - name: System.Windows.Xps
       items:
-        - name: XpsDocumentWriter
+        - name: Classe XpsDocumentWriter
           items:
             - name: Metodo raise__WritingCancelled
               href: additional-apis/xpsdocumentwriter-raise-writingcancelled-method-system-windows-xps.md
@@ -585,8 +627,10 @@
               href: additional-apis/xpsdocumentwriter-writingprogresschanged-event-system-windows-xps.md
     - name: System.Xml
       items:
-        - name: Metodo XmlReader.CreateSqlReader
-          href: additional-apis/system.xml.xmlreader.createsqlreader.md
+        - name: Classe XmlReader
+          items:
+            - name: Metodo CreateSqlReader
+              href: additional-apis/system.xml.xmlreader.createsqlreader.md
     - name: Spazio dei nomi adodb
       items:
         - name: Interfaccia di connessione
@@ -601,16 +645,22 @@
           href: additional-apis/stdole.dispparams.md
         - name: Struttura EXCEPINFO
           href: additional-apis/stdole.excepinfo.md
-        - name: Proprietà IFont.Name
-          href: additional-apis/stdole.ifont.name.md
+        - name: Classe IFont
+          items:
+            - name: Name (proprietà)
+              href: additional-apis/stdole.ifont.name.md
         - name: Interfaccia IFontDisp
           href: additional-apis/stdole.ifontdisp.md
-        - name: Proprietà IPicture.Handle
-          href: additional-apis/stdole.ipicture.handle.md
+        - name: Classe IPicture
+          items:
+            - name: Proprietà Handle
+              href: additional-apis/stdole.ipicture.handle.md
         - name: Interfaccia IPictureDisp
           href: additional-apis/stdole.ipicturedisp.md
-        - name: Proprietà IPicture.Handle
-          href: additional-apis/stdole.ipicturedisp.handle.md
+        - name: Classe IPictureDisp
+          items:
+            - name: Proprietà Handle
+              href: additional-apis/stdole.ipicturedisp.handle.md
         - name: Interfaccia StdFont
           href: additional-apis/stdole.stdfont.md
         - name: Interfaccia StdPicture
